# ecs160-hw1

./: .gitignore  Cargo.toml  README.md  TASK.md  dump.rdb
.github/workflows/: rust-tests.yml
docs/: part_a.md  part_b.md  part_c.md  rust_syntax.md
src/: config.rs  error.rs  github.rs  lib.rs  main.rs  models.rs  tests.rs
src/app/: clone.rs  data_collector.rs  mod.rs  output.rs  repo_fetcher.rs  report_generator.rs  report_presenter.rs  stats.rs
src/model/: commit.rs  issue.rs  mod.rs  owner.rs  repo.rs
src/service/: git_service.rs  interfaces.rs  mock_services.rs  mod.rs  redis_service.rs  test_services.rs  traits.rs
src/util/: json.rs  mod.rs
tests/: app_tests.rs  statistics_tests.rs
