[package]
name = "ecs160-hw1"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
