[package]
name = "ecs160-hw1"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
thiserror = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
walkdir = "2.4"

[dev-dependencies]
httpmock = "0.7"
